--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "body-parser": "^1.15.2",
     "child-process": "^1.0.2",
     "child_process": "^1.0.2",
+    "circular-json": "^0.3.1",
     "cookie-parser": "^1.4.3",
     "express": "^4.14.0",
     "express-request-id": "^1.3.0",
