--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "passport-google-oauth20": "^1.0.0",
     "passport-oauth2-refresh": "^1.0.0",
     "path": "^0.12.7",
+    "query-string": "^4.3.4",
     "readline": "^1.3.0",
     "request": "^2.79.0",
     "request-promise": "^4.1.1",
